deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-deployment
  namespace: app4
spec:
  selector:
    matchLabels:
      app: k8s
  replicas: 10 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: k8s
    spec:
      containers:
      - name: k8s
        image: 227169890401.dkr.ecr.ap-south-1.amazonaws.com/k8s:number
        ports:
        - containerPort: 80
