service.yaml
apiVersion: v1
kind: Service
metadata:
  name: static-service
  namespace: app4
spec:
  selector:
    app: static
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
