ingress.yaml






apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: petclinic-ing
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: 

    http:
      paths:
      - path:
        backend:
          serviceName: nginx-service
          servicePort: 80
